--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-asgiref==3.4.1
-Django==4.0.1
-djangorestframework==3.13.1
+
 python-decouple==3.5
-pytz==2021.3
-sqlparse==0.4.2
+Django==3.2.9
+django-timezone-field==4.2.1
+djangorestframework~=3.12.4
+PyJWT==2.3.0
+jwt~=1.3.1
